readme file and refactoring